# Temporanim

./: CMakeLists.txt  README.md  submission-realtime.md  todo.md
assimp/lib/pkgconfig/: assimp.pc
resources/shaders/: default.frag  default.vert
scenefiles/models/apple/: license.txt  scene.gltf
scenefiles/models/cabbage/: scene.gltf
scenefiles/models/carrot/: scene.gltf
scenefiles/models/onion/: scene.gltf
scenefiles/models/potato/: license.txt  scene.gltf
scenefiles/scenes/: bunny_mesh.json  collision_test.json  cornell_box.json  heraklios_scene.json  main_scene.json  mesh.json  mesh_test.json  paladin_scene.json  point_light_normal.json  projectiles.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/animation/: animator.cpp  animator.h  animautomaton.cpp  animautomaton.h
src/camera/: camera.cpp  camera.h
src/geometry/: geometry.cpp  geometry.h  mesh.cpp  mesh.h  model.cpp  model.h
src/physics/: box.h  collision.cpp  collision.h  projectile.cpp  projectile.h  rigidbody.cpp  rigidbody.h
src/primitive/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h
src/scene/: scene.cpp  scene.h
src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  sphere.cpp  sphere.h
src/texture/: texture.cpp  texture.h
src/utils/: debug.h  modelparser.cpp  modelparser.h  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h  transform.cpp  transform.h  uniloader.cpp  uniloader.h
src/utils/aspectratiowidget/: aspectratiowidget.hpp
